trying to fix background http://stackoverflow.com/questions/2643305/centering-a-background-image-using-css

--- a/style.css
+++ b/style.css
@@ -58,7 +58,9 @@ h1 {
 	height: 100px;
 	margin: 12px;
 	border: 9px solid #FEFCFF;
-	background-image: url(/images/twitter.png) no-repeat 0 0;;
+	background-image: url(path-to-file/img.jpg);
+	background-repeat:no-repeat;
+	background-position: center center;
 	}
 
 .twitter a {
